2006-02-09  Per Bothner  <per@bothner.com>

	* AddOp.java (inline): Don't inline, unless mustCompile.
	* MultiplyOp.java: Likewise.

	* ApplyToArgs.java (match1, match2, match3, match4, matchN,
	check1, check2, check3, check4, checkN): New methods.

2006-02-07  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (makeExp): New convenience factory method.

2006-02-06  Per Bothner  <per@bothner.com>

	* ApplyToArgs.java: New class, extends ProcedureN.
	* GetNamedInstancePart.java: New class, extends ProcedureN.
	(SetNamedInstancePart): New non-public class, extends Procedure2.
	* GetNamedPart.java: Major re-write, partly to handle inlining,
	and partly to handle namespaces.
	(GetNamedExp): New non-public class, extends ApplyExp.
	(NamedPart: New non-public class, extends procedureN.
	(CurriedInvoke): Remove no-longer used non-public class.
	(NamedPartSetter): New non-public class, extends gnu.mapping.Setter.
	* SetNamedPart.java: New class, extends Procedure3.
	* Makefile.am: Update with new files.
	* Setter.java (apply1): Allow argument to be an array as well.
	(inline): Check if operand is of an array type.
	Check if operand is a QuoteExp, as well as a ReferenceExp.
	(SetArray): New non-public class, extends Procedure2.
	(SetArrayExp): New non-public class, extends ApplyExp.

2006-01-24  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeObject): Print contents of Java arrays.
	(write(Array,int,int,Consumer)): Make sure space is written between
	elements even if Consumer is not an OutPort.

2006-01-11  Per Bothner  <per@bothner.com>

	* GetNamedPart.java: Some cleaning up.

	* GetModuleClass.java: Some cleaning up.

2006-01-07  Per Bothner  <per@bothner.com>

	* GetModuleClass.java: New class, extends Procedure0.
	(getModuleClassURI): New static main public entry point.
	* Makefile.am (java_sources): Add new file.

2006-01-04  Per Bothner  <per@bothner.com>

	* BaseUri.java (resolve): Remove method - using URI_utils instead.
