@@ -1,3 +1,7 @@
+2006-02-10  Per Bothner  <per@bothner.com>
+
+	* Arithmetic.java (toString): New method.
+
 2006-02-09  Per Bothner  <per@bothner.com>
 
 	* AddOp.java (inline): Don't inline, unless mustCompile.
